--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<button type="button" id="button-1" class="btn btn-primary">Primary</button>
-	<button type="button" id="button-2" class="btn btn-secondary">Secondary</button>
-	<button type="button" id="button-3" class="btn btn-success">Success</button>
-	<button type="button" id="button-4" class="btn btn-danger">Danger</button>
-	<button type="button" id="button-5" class="btn btn-warning">Warning</button>
-	<button type="button" id="button-6" class="btn btn-disabled">Disabled</button>
+	<button type="button" id="button-2" class="btn btn-outline-secondary">Secondary</button>
+	<button type="button" id="button-3" class="btn btn-success btn-lg">Success</button>
+	<button type="button" id="button-4" class="btn btn-danger btn-sm">Danger</button>
+	<button type="button" id="button-5" class="btn btn-warning btn-lg vw-100">Warning</button>
+	<button type="button" id="button-6" class="btn btn-info disabled">Disabled</button>
 	<button type="button" id="button-7" class="btn btn-light">Light</button>
 	<button type="button" id="button-8" class="btn btn-link">Link</button>
 </body>
